# smartf4

./: CMakeLists.txt  README.md  SmartF4.json.in  smartf4.cpp  smartf4.hpp
.github/workflows/: build_cmake.yml
